# MDflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  HELP.md  LICENSE  README.md  THIRD-PARTY-NOTICES  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: bugs.md  plan.md  review.md  roadmap.md  spec.md  tasks.md
docs/test-cases/: 01-editor.md  02-preview-render.md  03-view-modes-zoom.md  04-tabs-session.md  05-explorer.md  06-file-operations.md  07-split-sub-window.md  08-palette.md  09-settings-gear.md  10-ai-panel.md  11-export.md  (+12 more)
scripts/: build-excalidraw-vendor.mjs  excalidraw-bridge.tsx
src/: activitybar.ts  ai-layout.ts  capture.ts  compareactions.ts  compareview.ts  contextmenu.ts  document-kind.ts  editor.ts  excalidraw-document.ts  excalidrawview.ts  explorer.ts  export-options.ts  export-render.ts  file-drop.ts  files.ts  filesys.ts  fuzzy.ts  glyphs.ts  hash.ts  historyview.ts  icons.ts  keymap.ts  main.ts  markdown-format.ts  md-fit.ts  mindmap-document.ts  mindmap-selection.ts  mindmap-style.ts  mindmapview.ts  outline.ts  palette.ts  paths.ts  pdf-direct-rewrite.ts  pdf-edit-capabilities.ts  pdf-edit-document.ts  pdf-edit-writer.ts  pdf-font-inspection.ts  pdf-object-inspection.ts  pdf-ocr-review.ts  pdf-ocr.ts  (+30 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  defaults.rs  export.rs  external_terminal.rs  files.rs  lib.rs  macos_dock.rs  main.rs  menu.rs  native_windows.rs  pty.rs  recovery.rs  secrets.rs
(+116 files in other folders)
