[package]
name = "mdflow"
version = "0.2.7"
description = "A fast, lightweight markdown editor"
authors = ["MDflow contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri-plugin-dialog = "2"
trash = "5.2.6"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
portable-pty = "0.8"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
